-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0
-
None
-
3
-
9223372036854775807
The code to allow peer_credits to be set per NI was originally "left inactive" because there were concerns about peer_credits interfering with the ability for IB nodes to connect to each other when peer_credits are not the same (peer_credits controls the queue depth for IB).
With LU-3322, the values do not have to match so it is now safe to enable this code so peer_credits can be set per NI.